--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html {
 
 @font-face {
     font-family: "visbyCF";
-    src: url(./Visby\ CF\ 4.200/visbyCF-Medium.otf);
+    src: url(./Visby\ CF\ 4.200/VisbyCF-Medium.otf);
     font-weight: 500;
 }
 
