--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html {
 
 @font-face {
     font-family: "visbyCF";
-    src: url(./Visby\ CF\ 4.200/VisbyCF-Medium.otf);
+    src: url(./Visby\ CF\ 4.200/visbyCF-Medium.otf);
     font-weight: 500;
 }
 
@@ -916,6 +916,15 @@ p {
     border-radius: 30px;
     
 }
+.rm{
+    display: none;
+    padding: 20px 30px 20px 30px;
+    border-radius: 5rem;
+    font-weight: 700;
+    font-size: 1rem;
+    background-color: #0E1E32;
+    color: white;
+}
 
 @media (max-width:728px) {
 
@@ -1156,7 +1165,9 @@ p {
         text-align: center;
         gap: 1rem;
     }
-
+    #headline>h2{
+        padding: 0;
+    }
     .vertical-breakline{
         display: none;
     }
@@ -1174,9 +1185,19 @@ p {
     }
     .faq-column{
         flex-wrap: wrap;
+        width: 100%;
+        gap: 1rem;
     }
     .right-column{
         display: none;
+    }
+    .questions{
+        gap: 2rem;
+        white-space: nowrap;
+    }
+    .rm{
+        display: block;
+        width: 100%;
     }
 }   
     
