--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ html {
     src: url(./Visby\ CF\ 4.200/VisbyCF-Medium.otf);
     font-weight: 500;
 }
+@font-face {
+    font-family: "visbyCF";
+    src: url(./Visby\ CF\ 4.200/VisbyCF-ExtraBold.otf);
+    font-weight: 900;
+}
+
 
 
 
@@ -302,7 +308,9 @@ em {
 
 /* Comparison Box*/
 
-
+.toggleButton{
+    display: none;
+}
 .compBox {
     display: flex;
     border-radius: 28px;
@@ -549,8 +557,8 @@ ul #cross::before {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
     margin-bottom: 30px;
+    gap:2rem;
 
 }
 
@@ -643,7 +651,6 @@ ul #cross::before {
 
 .standard {
     justify-items: flex-start;
-    margin-top: 50px;
     margin-bottom: 20px;
     border: 3px solid var(--Text-color, #0E1E32);
     padding: 50px;
@@ -679,7 +686,6 @@ h1 {
 
 .premium {
     justify-items: flex-start;
-    margin-top: 50px;
     margin-bottom: 20px;
     background: linear-gradient(358deg, #580AFF 0.4%, #5379FF 95.64%);
     padding: 50px;
@@ -925,7 +931,67 @@ p {
     background-color: #0E1E32;
     color: white;
 }
+.aboutus-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.aboutus-content{
+    display: flex;
+    gap: 5rem;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+.aboutus-right{
+    max-width: 40%;
+}
 
+.aboutus-right h1{
+    line-height: 1;
+    font-weight: 900;
+}
+
+
+#description{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.footer *{
+    color: var(--Color, #FFF);
+    margin-top: 2rem;
+    
+}
+.footer{
+    background-color: var(--Text-color);
+}
+
+.footer-all{
+    background-color: var(--Text-color);
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    padding: 2rem;
+    flex-wrap: wrap;
+}
+
+.footer-content{
+    max-width: 30%;
+}
+
+.footer-legal{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+}
+
+.footer-terms{
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
+}
 @media (max-width:728px) {
 
     h1 {
@@ -984,7 +1050,9 @@ p {
         box-sizing: border-box;
 
     }
-
+    .agency{
+        max-width: 70%;
+    }
     .compBox {
         width: 100%;
         overflow-x: auto;
@@ -992,21 +1060,56 @@ p {
         background: none;
         filter: none;
         padding: 0;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
         border-radius: 0;
 
     }
-
-
-    .comparison-bg {
-        padding: 30;
+    .compcontent{
+        margin-top: 1rem;
     }
 
+    .comparison-bg {
+        padding: 0;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        justify-items: center;
+    }
+    .toggleButton{
+        display: flex;
+        background-color: var(--Text-color);
+        padding: 10px;
+        justify-content: center;
+        gap: 0.5rem;
+        border-radius: 5rem;
+        align-self: center;
+    }
+    .tgOne{
+        padding: 10px 20px 10px 20px;
+        border-radius: 2rem;
+        background: none;
+        border: none;
+        color: white;
+        font-size: 1rem;
+        font-weight: 700;
+    }
+
+    .tgTwo{
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+    .active-tg{
+        background: white;
+        color: var(--Text-color);
+    }
     .compBox::-webkit-scrollbar {
         display: none;
     }
 
     .swiper {
         max-width: 100%;
+        height: 60%;
     }
 
     .swiper-button-next:after,
@@ -1043,7 +1146,7 @@ p {
         width: 100%;
         padding: 0;
         padding-top: 20px;
-
+   
     }
 
     .hero-content {
@@ -1089,7 +1192,9 @@ p {
         width: 100%;
 
     }
-
+    .pricing-section{
+        padding-bottom: 2rem;
+    }
     .testi-cards {
         box-sizing: border-box;
         width: 100%;
@@ -1108,21 +1213,24 @@ p {
     }
     .plans {
         overflow-x: auto;
+        gap: 1rem;
     }
 
     .standard {
-        max-width: 100%;
+        min-width: 80%;
         padding: 20px;
         border-radius: 10px;
     }
 
     .premium {
+        min-width: 80%;
         padding: 20px;
         border-radius: 10px;
     }
 
     .primary-button {
         font-size: 14px;
+        width: 100%;
     }
 
     .secondary-button {
@@ -1138,6 +1246,8 @@ p {
         flex-wrap: wrap;
         flex-direction: row;
         padding: 20px;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
     }
 
     .dontOffer-content {
@@ -1180,24 +1290,64 @@ p {
     
     
     }
+    .faq-section{
+        justify-content: center;
+        align-items: center;
+    }
     .left-column{
         max-width: 100%;
+        align-items: center;
     }
     .faq-column{
         flex-wrap: wrap;
         width: 100%;
         gap: 1rem;
+        margin-bottom: 2rem;
     }
     .right-column{
         display: none;
     }
     .questions{
-        gap: 2rem;
-        white-space: nowrap;
+       gap: 3rem;
+        
     }
     .rm{
         display: block;
         width: 100%;
+    }
+    .chris img{
+        width: 100%;
+    }
+    .aboutus-content{
+        flex-wrap: wrap;
+        gap: 2rem;
+    }
+    .aboutus-right{
+        max-width: 100%;
+        text-align: center;
+    }
+    .footer{
+        margin-top: 1rem;
+    }
+    .footer-all{
+        gap: 3rem;
+    }
+    .footer-content{
+        max-width: 100%;
+    }
+    #legalimg{
+        width: 100%;
+    }
+
+    .footer-legal{
+        text-align: center;
+    }
+    .footer-terms{
+        flex-direction: row;
+        flex-wrap: wrap;
+        text-align: center;
+        gap: 3rem;
+        justify-content: center;
     }
 }   
     
