--- a/style.css
+++ b/style.css
@@ -974,23 +974,37 @@ p {
     gap: 5rem;
     padding: 2rem;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .footer-content{
     max-width: 30%;
 }
-
+.footer-content p{
+    margin: 0;
+}
 .footer-legal{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
     align-items: center;
+    margin: 0;
+}
+.footer-legal p{
+    margin: 0;
+}
+.footer-legal img{
+    margin: 0;
 }
 
 .footer-terms{
     display: flex;
     flex-direction: column;
-    gap: 0.7rem;
+    gap: 1.5rem;
+
+}
+.footer-terms p{
+    margin: 0;
 }
 @media (max-width:728px) {
 
@@ -1329,7 +1343,7 @@ p {
     .footer{
         margin-top: 1rem;
     }
-   .footer-all{
+    .footer-all{
         gap: 2rem;
     }
     .footer-content{
